CSS: Fix layout issue on Chrome and Opera

--- a/src/frontend/homepage/app/styles/main.scss
+++ b/src/frontend/homepage/app/styles/main.scss
@@ -91,6 +91,7 @@
   &::before {
     content: ' ';
     background-color: $backgroundColor;
+    width: 100%;
     height: 130px;
   }
 
